[package]
name = "fleen"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"
egui_ltreeview = "0.5.3"
rfd = "0.15.4"
thiserror = "2.0.16"
toml = "0.9.5"
markdown = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
