[package]
name = "fleen"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"
egui_ltreeview = "0.5.3"
rfd = "0.15.4"
thiserror = "2.0.16"
toml = "0.9.5"
markdown = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
